[gd_scene load_steps=2 format=2]

[ext_resource path="res://logingame.gd" type="Script" id=1]

[node name="logingame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="playernamelabel" type="Label" parent="."]
margin_top = 40.0
margin_right = 79.0
margin_bottom = 71.0
text = "player name
"

[node name="LineEdit" type="LineEdit" parent="playernamelabel"]
margin_top = 20.0
margin_right = 79.0
margin_bottom = 44.0

[node name="passwordlabel" type="Label" parent="."]
margin_top = 94.0
margin_right = 60.0
margin_bottom = 108.0
text = "password"

[node name="LineEdit" type="LineEdit" parent="passwordlabel"]
margin_top = 20.0
margin_right = 79.0
margin_bottom = 44.0

[node name="Button" type="Button" parent="."]
margin_top = 160.0
margin_right = 79.0
margin_bottom = 180.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="HTTPRequest3" type="HTTPRequest" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
[connection signal="request_completed" from="HTTPRequest3" to="." method="_on_HTTPRequest3_request_completed"]
